k8s/dev/app-mapper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-mapper
  labels:
    name: app-mapper
spec:
  ports:
    - port: 80
  selector:
    name: app-mapper
