k8s/dev/consul-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
  labels:
    name: consul
spec:
  ports:
  - name: serverrpc
    port: 8300
  - name: http
    port: 8500
  selector:
    name: consul
