k8s/dev/control-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: control
  labels:
    name: control
spec:
  ports:
    - port: 80
  selector:
    name: control
