k8s/dev/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    name: frontend-mt
  type: LoadBalancer
