k8s/dev/json-builder-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-builder
  labels:
    name: json-builder
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    name: json-builder
