k8s/dev/launch-generator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: launch-generator
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
      protocol: TCP
  selector:
    name: launch-generator
