k8s/dev/monitoring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring
  labels:
    name: monitoring
spec:
  ports:
    - port: 9090
      name: prometheus
    - port: 9093
      name: alertmanager
    - port: 3000
      name: grafana
  selector:
    name: monitoring
