k8s/dev/pipe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipe
  labels:
    name: pipe
spec:
  ports:
    - port: 80
  selector:
    name: pipe
