k8s/dev/ui-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-server
  annotations:
    prometheus.io.scrape: "false"
spec:
  ports:
    - port: 80
  selector:
    name: ui-server
